# MyKnowledgeMCP

./: .gitignore  README.md  config.toml  pyproject.toml
docs/: DETAIL.md
src/knowledge_mcp/: config.py  database.py  models.py  server.py
